# finite-fields-algorithms

./: .gitignore  CMakeLists.txt  README.md  build.sh
bench/: bench.cpp
include/alcp/: alcp.hpp  bigint.hpp  fast.hpp  fft.hpp  fft_tables.hpp  fp.hpp  fq.hpp  polynomial.hpp
python/: algoritmos_rapidos.py  cuerpos_finitos.py  factorizacion.py
python-bindings/: bindings.cpp  compare_nemo.jl  oracle.py  oracle_vectors.txt  showcase.py  test_module.py
tests/: check.hpp  crosscheck.cpp  smoke.cpp  smoke_fq.cpp  test_all.cpp
